--- a/style.css
+++ b/style.css
@@ -1,261 +1,149 @@
-*{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-    user-select: none;
-    /* filter: grayscale(1); */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: all 0.5s;
 }
-nav{
-    display: flex;
-    background-color: rgb(227, 227, 227);
-    height: 60px;
-    align-items: center;
-    /* border: solid; */
-    width: 100%;
-    /* box-shadow: 3px 3px 2px 1px rgb(196, 196, 196); */
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
-h2{
-    color: rgb(27, 27, 27);
+html {
+  font-size: 62.5%;
+  /* 因为100%=16px，1px=6.25%，所以10px=62.5%， */
 }
-#left{
-    display: flex;
-    align-items: center;
-    margin-left: 30px;
-    margin-right: 50px;
-    /* margin-bottom: 20px; */
-    /* border: solid; */
+html body {
+  background-color: #FAFAFA;
 }
-#right{
-    display: flex;
-    /* border: solid; */
+html a {
+  text-decoration: none;
+  /* 去除默认的下划线 */
+  color: transparent;
+  /* 去除默认的颜色和点击后变化的颜色 */
 }
-#right ul{
-    display: flex;
-    list-style: none;
-    /* border: solid; */
-    align-items: center;
+.nav {
+  user-select: none;
+  display: flex;
+  padding: 3rem;
+  padding-bottom: 1rem;
+  font-size: 2.5rem;
+  color: #9e9e9e;
 }
-#right ul li{
-    margin: 0px 20px;
+.nav div {
+  margin: 0rem 1rem;
+  transition: all 0.2s;
 }
-#right ul a{
-    text-decoration: none;
-    font-size: 18px;
-    color: rgb(71, 71, 71);
+.nav :nth-child(1) {
+  font-weight: bold;
+  color: black;
 }
-#right ul a:hover{
-    color: black;
+.painting {
+  user-select: none;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
 }
-#nav-check{
-    display: none;
+.painting div {
+  margin-top: 20rem;
 }
-label[for="nav-check"] {
-    display: none;
+.painting div p {
+  text-align: center;
 }
-
-/* 内容区 */
-#content{
-    /* height: 110vh; */
-    /* background-color: rgb(245, 245, 245); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
+.computer {
+  user-select: none;
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+  font-size: 1.6rem;
+  padding: 1rem 2rem;
 }
-#content div{
-    width: 80vw;
-    /* background-image: url(images/1.png); */
-    /* height: 50vh; */
-    /* border: solid 2px; */
-    /* border-radius: 15px; */
-    display: flex;
-    justify-content: center;
+.computer .github {
+  margin: 1rem;
+  background-color: #24292f;
+  height: 19rem;
+  width: 15rem;
+  border-radius: 1.6rem;
+  color: #FAFAFA;
+  text-align: center;
+  font-size: 1.4rem;
+  padding-top: 4rem;
 }
-#computer .c-left,#other .c-left{
-    width: 40vw;
-    border-radius: 15px;
-    /* border: solid 4px; */
-    overflow: hidden;
-    
+.computer .github div svg {
+  width: 8rem;
+  height: 8rem;
 }
-#computer .c-left{
-    box-shadow: 3px 3px 2px 1px rgb(196, 196, 196);
+.computer .github div div {
+  font-size: 1rem;
+  opacity: 0;
 }
-#computer .c-left img,#other .c-left img{
-    width: 40vw;
-    border-radius: 15px;
-    /* border: solid 4px; */
+.computer .github div div p:nth-child(1) {
+  margin: 0.5rem 1.7rem;
 }
-#computer .c-left img{
-    border: solid 1px rgb(198, 198, 198);
+.computer .github div div p:nth-child(2) {
+  font-style: italic;
+  font-weight: bold;
+  background-image: linear-gradient(to right, orange, purple);
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 1.6rem;
 }
-#computer .c-right,#other .c-right {
-    width: 30vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    /* border: solid 5px rebeccapurple; */
+.computer .github div div p:nth-child(2):hover {
+  background-image: linear-gradient(to right, #ffb11f, #a408a4);
 }
-
-
-.c-right h1{
-    font-size: 40px;
+.computer .github:hover {
+  padding-top: 2rem;
 }
-.c-right button{
-    margin-top: 25px;
-    height: 50px;
-    width: 200px;
-    border-radius: 15px;
-    border-style: none;
-    background-color: rgb(84, 89, 192);
-    color: aliceblue;
-    font-size: 25px;
-    font-weight: 600;
-    cursor: pointer;
+.computer .github:hover div svg {
+  width: 7rem;
+  height: 7rem;
 }
-.c-right a{
-    cursor: initial;
+.computer .github:hover div div {
+  opacity: 1;
 }
-.c-right button:hover{
-    background-color: rgb(50, 80, 200);
+.computer .docs {
+  background-color: #ffffff;
+  height: 10rem;
+  width: 15rem;
+  border-radius: 1.6rem;
+  margin: 1rem;
+  text-align: center;
+  padding-top: 2rem;
+  border: #a2a2a2 solid 0.1rem;
+  opacity: 0.8;
+  transition: all 0s;
 }
-
-#other{
-    margin-top: 30px;
+.computer .docs svg {
+  width: 4rem;
+  height: 4rem;
 }
-
-
-
-
-
-
-
-/* 底部 */
-.bottom{
-    width: 100%;
-    background-color: rgb(227, 227, 227);
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.computer .docs p {
+  color: black;
+  font-size: 1rem;
 }
-
-#name{
-    text-align: center;
-    /* margin-top: 10px; */
+.computer .docs:hover {
+  transition: all 0s;
+  opacity: 1;
 }
-
-#name img{
-    position: relative;
-    width: 250px;
-    opacity: 1;
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100vw;
+  position: fixed;
+  bottom: 0;
+  padding: 1rem;
 }
-
-#beian img{
-    width: 150px;
-    opacity: 0.8;
+.footer a {
+  color: #303133;
+  transition: all 0s;
 }
-
-#beian img:hover{
-    opacity: 1;
+.footer a:hover {
+  color: #000000;
 }
-
-
-
-@media screen and (max-width:700px) {
-    nav{
-        background-color:  rgb(227, 227, 227);
-        flex-wrap: wrap;
-        justify-content: space-between;
-        height: auto;
-    }
-    #left{
-        padding: 10px
-        /* height: inherit; */
-        /* width: 100%; */
-    }
-    #right{
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        margin-left: 30px;
-        margin-right: 50px;
-        margin: 0;
-        background-color: inherit;
-        
-    }
-    #right ul{
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
-    #right ul li{
-        width: 85%;
-        padding-top: 5px;
-        padding-bottom: 8px;
-        border-top: 2px solid rgb(219, 219, 219);
-    }
-    label[for="nav-check"]{
-        display: initial;
-        margin-right: 50px;
-        font-size: 20px;
-        color: rgb(83, 83, 83);
-    }
-    /* label[for="nav-check"]:hover{
-        color: rgb(40, 40, 40);
-    } */
-    #nav-check:checked + label{
-        color: rgb(40, 40, 40);
-    }
-    #nav-check:checked ~ #right{
-        display: flex;
-    }
-    #right ul li a{
-        margin-left: 5px;
-    }
-
-    /* 内容区 */
-
-    #content div{
-        width: 85vw;
-        flex-direction: column;
-        margin-top: 5px;
-        margin-bottom: 5px;
-    }
-    #computer .c-left,#other .c-left{
-        width: 85vw;   
-    }
-
-    #computer .c-left img,#other .c-left img{
-        width: 90vw;
-    }
-    #computer .c-right,#other .c-right {
-        width: 80vw;
-        /* border: solid 1px; */
-        flex-direction: row;
-        margin-top: 10px;
-        /* margin-left: 20px; */
-        /* justify-content: flex-start; */
-    }
-
-
-    .c-right h1{
-        font-weight: 400;
-        font-size: 20px;
-    }
-    .c-right button{
-        margin-top: 0;
-        margin-left: 20px;
-        height: 30px;
-        width: 150px;
-        border-radius: 20px;
-        border-style: none;
-        color: aliceblue;
-        font-size: 16px;
-        font-weight: 500;
-        cursor: pointer;
-    }
+.footer a p {
+  transition: all 0s;
 }
