--- a/style.less
+++ b/style.less
@@ -112,7 +112,7 @@ html{
 
     .docs{
         background-color: #ffffff;
-        height: 10rem;
+        height: 12rem;
         width: 15rem;
         border-radius: 1.6rem;
         margin: 1rem;
@@ -148,7 +148,7 @@ html{
         .opendocs{
             background-color: rgb(0, 106, 159);
             width: 0rem;
-            height: 10rem;
+            height: 12rem;
         }
 
         &:hover{
@@ -176,6 +176,65 @@ html{
             .opendocs{
                 background-color: rgb(1, 86, 129);
                 width: 2rem;
+            }
+        }
+    }
+
+    .yuque{
+        background-color: #ffffff;
+        height: 6rem;
+        width: 15rem;
+        border-radius: 1.6rem;
+        margin: 1rem;
+        text-align: center;
+        border: rgb(203, 203, 203) solid 0.1rem;
+        overflow: hidden;
+        // .center();
+        padding: 1rem;
+        .center();
+        flex-wrap: wrap;
+        img{
+            width: 7rem;
+        }
+        p{
+            font-size: 1rem;
+            display: none;
+            opacity: 0;
+        }
+        a{
+            font-style: italic;
+            font-weight: bold;
+            background-image: linear-gradient(to right, orange, purple);
+            -webkit-background-clip: text;
+            color: transparent;
+            font-size: 1.4rem;
+            &:hover{
+                background-image: linear-gradient(to right, rgb(255, 177, 31), rgb(164, 8, 164));
+            }
+        }
+        .text{
+            display: block;
+            opacity: 1;
+        }
+    }
+
+    .plus{
+        height: 6rem;
+        width: 18rem;
+        .docslogo{
+            width: 18rem;
+            >div{
+                svg{
+                    width: 2rem;
+                    height: 2rem;
+                }
+            }
+        }
+
+        &:hover{
+            .docslogo{
+                padding: 1rem 1rem;
+                width: 16rem;
             }
         }
     }
