--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: all 0.7s, filter 0s;
+  transition: height 0.6s;
 }
 html {
   font-size: 62.5%;
@@ -18,6 +18,7 @@ html a {
   /* 去除默认的颜色和点击后变化的颜色 */
 }
 .blur-filter {
+  transition: all 0.6s;
   position: absolute;
   z-index: -1;
   width: 100vw;
@@ -26,8 +27,10 @@ html a {
   top: 0;
   background: rgba(0, 0, 0, 0);
   backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
 }
 .appear {
+  transition: all 0.6s;
   z-index: 2;
   background: rgba(0, 0, 0, 0.25);
 }
@@ -138,6 +141,7 @@ html a {
   margin-left: -15rem;
   margin-top: -10rem;
   z-index: 3;
+  transition: height 0.7s;
 }
 .computer .box1 .github.show > div svg {
   width: 7rem;
@@ -203,6 +207,7 @@ html a {
   height: 30rem;
 }
 .computer .box2 .box2-1 .docs.show {
+  transition: height 0.7s;
   position: absolute;
   height: 20rem;
   width: 30rem;
@@ -281,6 +286,7 @@ html a {
   background-image: linear-gradient(to right, #ffb11f, #a408a4);
 }
 .computer .box2 .box2-2 .yuque.show {
+  transition: height 0.7s;
   position: absolute;
   height: 20rem;
   width: 30rem;
@@ -346,6 +352,7 @@ html a {
   align-items: center;
 }
 .computer .box3 .hexo.show {
+  transition: height 0.7s;
   position: absolute;
   height: 20rem;
   width: 30rem;
