--- a/style.less
+++ b/style.less
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    transition: all 0.7s,filter 0s;
+    transition: height 0.6s;
 }
 
 html{
@@ -21,7 +21,7 @@ html{
 // @media screen and (max-width: 700px) {html{font-size:60%;}}
 
 .blur-filter{
-    // transition: all 0.5s;
+    transition: all 0.6s;
     position: absolute;
     z-index: -1;
     width: 100vw;
@@ -30,10 +30,11 @@ html{
     top: 0;
     background: rgba(0, 0, 0, 0);
     backdrop-filter: blur(1px); //毛玻璃
+    -webkit-backdrop-filter: blur(1px); 
 }
 
 .appear{
-    // transition: all 0.5s;
+    transition: all 0.6s;
     z-index: 2;
     background: rgba(0, 0, 0, 0.25);
 }
@@ -145,8 +146,8 @@ html{
                 filter: brightness(100%);
             }
             &.show{
-                // transition: height 0.7s;
                 .open(20rem,30rem);
+                transition: height 0.7s;
                 >div{
                     svg{
                         width: 7rem;
@@ -205,6 +206,7 @@ html{
                     height: 30rem;
                 }
                 &.show{
+                    transition: height 0.7s;
                     .open(20rem, 30rem);
                     text-align: left;
                     .docslogo{
@@ -261,6 +263,7 @@ html{
                     .goto();
                 }
                 &.show{
+                    transition: height 0.7s;
                     .open(20rem, 30rem);
                     padding: 3rem;
                     p{
@@ -315,6 +318,7 @@ html{
             }
     
             &.show{
+                transition: height 0.7s;
                 .open(20rem, 30rem);
                 padding: 3rem;
                 img{
