更改链接和调整动画

--- a/style.less
+++ b/style.less
@@ -117,7 +117,7 @@ html{
     .box1{
         .boxconfig(1rem, 19rem, 15rem,1.6rem);
         .github{
-            // transition: height 0.7s;
+            // transition: width 0.6s;
             background-color: #24292f;
             .boxconfig(0rem, 19rem, 15rem,1.6rem);
             .center();
@@ -146,8 +146,8 @@ html{
                 filter: brightness(100%);
             }
             &.show{
-                .open(20rem,30rem);
-                transition: height 0.7s;
+                // transition: width 0.6s;
+                .open(30rem,30rem);
                 >div{
                     svg{
                         width: 7rem;
